--- a/index.html
+++ b/index.html
@@ -1,148 +1,149 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="primaryStyles.css">
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Inicio</title>
+  <!--Etiquetas Link y Meta de Bootstrap-->
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+  <title>Document</title>
 </head>
-
 <body>
-  <header>
-    <nav class="navbar">
-      <div class="navbar-Logo">
-        <a href="Inicio.html"><img src="https://i.ibb.co/8BXzN0R/Craft-Mania-Logo.png" alt="Logo CraftMania"
-            height="32"></a>
+
+  <!--Contenido del index.html-->
+  <nav class="navbar">
+    <div class="navbar-Logo">
+      <a href="Inicio.html"><img src="https://i.ibb.co/8BXzN0R/Craft-Mania-Logo.png" alt="Logo CraftMania"
+          height="32"></a>
+    </div>
+    <div class="navbar-menu">
+      <ul>
+        <a href="Inicio.html">
+          <li>Inicio</li>
+        </a>
+        <a href="Nosotros.html">
+          <li>Nosotros</li>
+        </a>
+        <a href="Catalogo.html">
+          <li>Catalogo</li>
+        </a>
+        <a href="Noticias.html">
+          <li>Novedades</li>
+        </a>
+        <a href="Contacto.html">
+          <li>Contactanos</li>
+        </a>
+      </ul>
+    </div>
+    <div class="navbar-button">Registrarse</div>
+  </nav>
+</header>
+<main>
+  <div id="upper">
+    <div class="overlay">
+      <div class="content">
+        <h1>Este sitio es para un H1.</h1>
+        <br>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+          labore
+          et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+          tempor incididunt ut labore
+          et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+          tempor incididunt ut labore
+          et dolore magna aliqua.</p>
       </div>
-      <div class="navbar-menu">
-        <ul>
-          <a href="Inicio.html">
-            <li>Inicio</li>
-          </a>
-          <a href="Nosotros.html">
-            <li>Nosotros</li>
-          </a>
-          <a href="Catalogo.html">
-            <li>Catalogo</li>
-          </a>
-          <a href="Noticias.html">
-            <li>Novedades</li>
-          </a>
-          <a href="Contacto.html">
-            <li>Contactanos</li>
-          </a>
-        </ul>
-      </div>
-      <div class="navbar-button">Registrarse</div>
-    </nav>
-  </header>
-  <main>
-    <div id="upper">
-      <div class="overlay">
-        <div class="content">
-          <h1>Este sitio es para un H1.</h1>
-          <br>
-          <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-            labore
-            et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore
-            et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-            tempor incididunt ut labore
-            et dolore magna aliqua.</p>
-        </div>
-        <div class="media">
-          <div class="outer-div">
-            <div class="bottom-left"></div>
-            <div class="top-right"></div>
-          </div>
+      <div class="media">
+        <div class="outer-div">
+          <div class="bottom-left"></div>
+          <div class="top-right"></div>
         </div>
       </div>
     </div>
-    <div id="middle">
-      <div class="serviceShortcut">
-        <div class="servicePicture"> <img src="https://i.ibb.co/Zz3ptLx/vinil-textil-easyweed-mexico-siser.jpg"
-            alt="Uso de Vinil">
-          <div class="serviceText">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
-        </div>
+  </div>
+  <div id="middle">
+    <div class="serviceShortcut">
+      <div class="servicePicture"> <img src="https://i.ibb.co/Zz3ptLx/vinil-textil-easyweed-mexico-siser.jpg"
+          alt="Uso de Vinil">
+        <div class="serviceText">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
       </div>
+    </div>
 
-      <div class="serviceShortcut">
-        <div class="servicePicture"> <img src="https://i.ibb.co/PTX6mPJ/cabecera-que-es-la-sublimacion-2.jpg"
-            alt="Sublimación">
-          <div class="serviceText">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
-        </div>
+    <div class="serviceShortcut">
+      <div class="servicePicture"> <img src="https://i.ibb.co/PTX6mPJ/cabecera-que-es-la-sublimacion-2.jpg"
+          alt="Sublimación">
+        <div class="serviceText">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
       </div>
+    </div>
 
-      <div class="serviceShortcut">
-        <div class="servicePicture"> <img
-            src="https://i.ibb.co/sbfGvWr/silhouette-cameo-4-sticker-tutorial-beginners.jpg"
-            alt="Stickers y Corte de Cameo 4">
-          <div class="serviceText">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+    <div class="serviceShortcut">
+      <div class="servicePicture"> <img
+          src="https://i.ibb.co/sbfGvWr/silhouette-cameo-4-sticker-tutorial-beginners.jpg"
+          alt="Stickers y Corte de Cameo 4">
+        <div class="serviceText">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+      </div>
+    </div>
+  </div>
+</main>
+<footer class="footer">
+  <footer>
+    <div class="footer-content">
+      <div class="footer-logo">
+        <h3>Craftmania Panamá</h3>
+      </div>
+      <div class="footer-links">
+        <div class="footer-section">
+          <h4>Catálogo</h4>
+          <ul>
+            <li><a href="#">Productos</a></li>
+            <li><a href="#">Ofertas</a></li>
+            <li><a href="#">Novedades</a></li>
+            <!-- Añadir más opciones aquí -->
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h4>Servicios</h4>
+          <ul>
+            <li><a href="#">Envíos</a></li>
+            <li><a href="#">Personalización</a></li>
+            <li><a href="#">Asesoramiento</a></li>
+            <!-- Añadir más opciones aquí -->
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h4>Freebies</h4>
+          <ul>
+            <li><a href="#">Descargas gratuitas</a></li>
+            <li><a href="#">Muestras gratuitas</a></li>
+            <li><a href="#">Promociones</a></li>
+            <!-- Añadir más opciones aquí -->
+          </ul>
+        </div>
+        <div class="footer-section">
+          <h4>Nosotros</h4>
+          <ul>
+            <li><a href="#">Misión y visión</a></li>
+            <li><a href="#">Equipo</a></li>
+            <li><a href="#">Testimonios</a></li>
+            <!-- Añadir más opciones aquí -->
+          </ul>
         </div>
       </div>
     </div>
-  </main>
-  <footer class="footer">
-    <footer>
-      <div class="footer-content">
-        <div class="footer-logo">
-          <h3>Craftmania Panamá</h3>
-        </div>
-        <div class="footer-links">
-          <div class="footer-section">
-            <h4>Catálogo</h4>
-            <ul>
-              <li><a href="#">Productos</a></li>
-              <li><a href="#">Ofertas</a></li>
-              <li><a href="#">Novedades</a></li>
-              <!-- Añadir más opciones aquí -->
-            </ul>
-          </div>
-          <div class="footer-section">
-            <h4>Servicios</h4>
-            <ul>
-              <li><a href="#">Envíos</a></li>
-              <li><a href="#">Personalización</a></li>
-              <li><a href="#">Asesoramiento</a></li>
-              <!-- Añadir más opciones aquí -->
-            </ul>
-          </div>
-          <div class="footer-section">
-            <h4>Freebies</h4>
-            <ul>
-              <li><a href="#">Descargas gratuitas</a></li>
-              <li><a href="#">Muestras gratuitas</a></li>
-              <li><a href="#">Promociones</a></li>
-              <!-- Añadir más opciones aquí -->
-            </ul>
-          </div>
-          <div class="footer-section">
-            <h4>Nosotros</h4>
-            <ul>
-              <li><a href="#">Misión y visión</a></li>
-              <li><a href="#">Equipo</a></li>
-              <li><a href="#">Testimonios</a></li>
-              <!-- Añadir más opciones aquí -->
-            </ul>
-          </div>
-        </div>
+    <div class="footer-bottom">
+      <p>Todos los derechos reservados &copy; Craftmania Panamá, 2023</p>
+      <div class="footer-legal">
+        <a href="#">Políticas de privacidad</a>
+        <a href="#">Términos y condiciones</a>
       </div>
-      <div class="footer-bottom">
-        <p>Todos los derechos reservados &copy; Craftmania Panamá, 2023</p>
-        <div class="footer-legal">
-          <a href="#">Políticas de privacidad</a>
-          <a href="#">Términos y condiciones</a>
-        </div>
-      </div>
-    </footer>
-
+    </div>
   </footer>
-<!-- JavaScript -->
-<script src="js/jquery-3.5.1.slim.min.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+
+</footer> 
+  <!--Script de BootStrap-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+    crossorigin="anonymous"></script>
+</body>
 </body>
 
 </html>
