--- a/index.html
+++ b/index.html
@@ -1,149 +1,159 @@
-<!DOCTYPE html>
 <html lang="en">
 
 <head>
-  <!--Etiquetas Link y Meta de Bootstrap-->
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-  <title>Document</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="primaryStyles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Inicio</title>
 </head>
+
 <body>
-
-  <!--Contenido del index.html-->
-  <nav class="navbar">
-    <div class="navbar-Logo">
-      <a href="Inicio.html"><img src="https://i.ibb.co/8BXzN0R/Craft-Mania-Logo.png" alt="Logo CraftMania"
-          height="32"></a>
-    </div>
-    <div class="navbar-menu">
-      <ul>
-        <a href="Inicio.html">
-          <li>Inicio</li>
-        </a>
-        <a href="Nosotros.html">
-          <li>Nosotros</li>
-        </a>
-        <a href="Catalogo.html">
-          <li>Catalogo</li>
-        </a>
-        <a href="Noticias.html">
-          <li>Novedades</li>
-        </a>
-        <a href="Contacto.html">
-          <li>Contactanos</li>
-        </a>
-      </ul>
-    </div>
-    <div class="navbar-button">Registrarse</div>
-  </nav>
-</header>
-<main>
-  <div id="upper">
-    <div class="overlay">
-      <div class="content">
-        <h1>Este sitio es para un H1.</h1>
-        <br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore
-          et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-          tempor incididunt ut labore
-          et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-          tempor incididunt ut labore
-          et dolore magna aliqua.</p>
-      </div>
-      <div class="media">
-        <div class="outer-div">
-          <div class="bottom-left"></div>
-          <div class="top-right"></div>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="Inicio.html"><img src="./assets/Craft-Mania-Logo.png" alt="Logo de CraftMania"
+            height="35"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/catalogo.html">Catalogo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/noticias.html">Novedades</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="./pages/contacto.html">Contactanos</a>
+            </li>
+          </ul>
         </div>
       </div>
-    </div>
-  </div>
-  <div id="middle">
-    <div class="serviceShortcut">
-      <div class="servicePicture"> <img src="https://i.ibb.co/Zz3ptLx/vinil-textil-easyweed-mexico-siser.jpg"
-          alt="Uso de Vinil">
-        <div class="serviceText">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+    </nav>
+  </header>
+  <main>
+    <!--Sección Inicial de la Pagina-->
+    <div class="upper">
+      <div class="overlay container-fluid p-absolute">
+        <div class="row h-100 d-flex justify-content-around">
+          <div class="col-lg-6 col-md-12 content">
+            <h1>Este sitio es para un H1.</h1>
+            <br>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+              labore
+              et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              tempor incididunt ut labore
+              et dolore magna aliqua.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+              tempor incididunt ut labore
+              et dolore magna aliqua.</p>
+          </div>
+          <div class="col-lg-6 media d-none d-lg-flex">
+            <div class="outer-div">
+              <div class="bottom-left"></div>
+              <div class="top-right"></div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
-    <div class="serviceShortcut">
-      <div class="servicePicture"> <img src="https://i.ibb.co/PTX6mPJ/cabecera-que-es-la-sublimacion-2.jpg"
-          alt="Sublimación">
-        <div class="serviceText">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
-      </div>
-    </div>
+    <!--Sección Media de la Pagina-->
 
-    <div class="serviceShortcut">
-      <div class="servicePicture"> <img
-          src="https://i.ibb.co/sbfGvWr/silhouette-cameo-4-sticker-tutorial-beginners.jpg"
-          alt="Stickers y Corte de Cameo 4">
-        <div class="serviceText">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
-      </div>
-    </div>
-  </div>
-</main>
-<footer class="footer">
-  <footer>
-    <div class="footer-content">
-      <div class="footer-logo">
-        <h3>Craftmania Panamá</h3>
-      </div>
-      <div class="footer-links">
-        <div class="footer-section">
-          <h4>Catálogo</h4>
-          <ul>
-            <li><a href="#">Productos</a></li>
-            <li><a href="#">Ofertas</a></li>
-            <li><a href="#">Novedades</a></li>
-            <!-- Añadir más opciones aquí -->
-          </ul>
-        </div>
-        <div class="footer-section">
-          <h4>Servicios</h4>
-          <ul>
-            <li><a href="#">Envíos</a></li>
-            <li><a href="#">Personalización</a></li>
-            <li><a href="#">Asesoramiento</a></li>
-            <!-- Añadir más opciones aquí -->
-          </ul>
-        </div>
-        <div class="footer-section">
-          <h4>Freebies</h4>
-          <ul>
-            <li><a href="#">Descargas gratuitas</a></li>
-            <li><a href="#">Muestras gratuitas</a></li>
-            <li><a href="#">Promociones</a></li>
-            <!-- Añadir más opciones aquí -->
-          </ul>
-        </div>
-        <div class="footer-section">
-          <h4>Nosotros</h4>
-          <ul>
-            <li><a href="#">Misión y visión</a></li>
-            <li><a href="#">Equipo</a></li>
-            <li><a href="#">Testimonios</a></li>
-            <!-- Añadir más opciones aquí -->
-          </ul>
+    <div id="middle">
+      <div class="container-fluid">
+        <div class="row h-100 d-flex align-items-center mb-20">
+          <div class="col-fluid col-lg-4 d-flex flex-column justify-content-center align-items-center">
+            <div class="servicePicture"><img src="./assets/Silhouette-Cameo-4-Stickers.jpg" alt=""></div>
+            <button type="button" class="btn btn-primary">Stickers</button>
+          </div>
+          <div class="col-fluid col-lg-4 d-flex flex-column justify-content-center align-items-center">
+            <div class="servicePicture"><img src="./assets/VinilEasyWeed-Muestra1-Shortcut.jpg" alt=""></div>
+            <button type="button" class="btn btn-primary">Nuestros Viniles</button>
+          </div>
+          <div class="col-fluid col-lg-4 d-flex flex-column justify-content-center align-items-center">
+            <div class="servicePicture"><img src="./assets/Sublimación-Prendas-Shortcut.jpg" alt=""></div>
+            <button type="button" class="btn btn-primary">Sublimación</button>
+          </div>
         </div>
       </div>
     </div>
-    <div class="footer-bottom">
-      <p>Todos los derechos reservados &copy; Craftmania Panamá, 2023</p>
-      <div class="footer-legal">
-        <a href="#">Políticas de privacidad</a>
-        <a href="#">Términos y condiciones</a>
-      </div>
-    </div>
+  </main>
+  <footer class="footer">
+    <footer>
+      <div class="container-fluid d-flex flex-column justify-content-center">
+        <div class="row d-none d-lg-flex">
+          <div class="col-3">
+            <div class="footer-section">
+              <h4>Catálogo</h4>
+              <ul>
+                <li><a href="#">Productos</a></li>
+                <li><a href="#">Ofertas</a></li>
+                <li><a href="#">Novedades</a></li>
+                <!-- Añadir más opciones aquí -->
+              </ul>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="footer-section">
+              <h4>Servicios</h4>
+              <ul>
+                <li><a href="#">Envíos</a></li>
+                <li><a href="#">Personalización</a></li>
+                <li><a href="#">Asesoramiento</a></li>
+                <!-- Añadir más opciones aquí -->
+              </ul>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="footer-section">
+              <h4>Freebies</h4>
+              <ul>
+                <li><a href="#">Descargas gratuitas</a></li>
+                <li><a href="#">Muestras gratuitas</a></li>
+                <li><a href="#">Promociones</a></li>
+                <!-- Añadir más opciones aquí -->
+              </ul>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="footer-section">
+              <h4>Nosotros</h4>
+              <ul>
+                <li><a href="#">Misión y visión</a></li>
+                <li><a href="#">Equipo</a></li>
+                <li><a href="#">Testimonios</a></li>
+                <!-- Añadir más opciones aquí -->
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <div class="footer-bottom">
+              <p>Todos los derechos reservados &copy; Craftmania Panamá, 2023</p>
+              <div class="footer-legal">
+                <a href="#">Políticas de privacidad</a>
+                <a href="#">Términos y condiciones</a>
+              </div>
+            </div>
+          </div>
+        </div>
+    </footer>
+
   </footer>
-
-</footer> 
-  <!--Script de BootStrap-->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
-    crossorigin="anonymous"></script>
-</body>
+  <!-- JavaScript -->
+  <script src="js/jquery-3.5.1.slim.min.js"></script>
+  <script src="js/popper.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </body>
 
 </html>
