--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nosotros - Craftmania Panamá</title>
-  <link rel="stylesheet" href="primaryStyles.css">
+  <link rel="stylesheet" href="../primaryStyles.css">
 </head>
 
 <body>
