--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -3,39 +3,43 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nosotros - Craftmania Panamá</title>
+  <link rel="stylesheet" href="../css/bootstrap.min.css" />
   <link rel="stylesheet" href="../primaryStyles.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title>Nosotros - Craftmania Panamá</title>
 </head>
 
 <body>
   <!-- Encabezado -->
   <header>
-    <nav class="navbar">
-      <div class="navbar-Logo">
-        <a href="Inicio.html"><img src="https://i.ibb.co/8BXzN0R/Craft-Mania-Logo.png" alt="Logo CraftMania"
-            height="32"></a>
+    <nav class="navbar navbar-expand-lg bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="../Inicio.html"><img src="../assets/Craft-Mania-Logo.png" alt="Logo de CraftMania"
+            height="35"></a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="nosotros.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="catalogo.html">Catalogo</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="noticias.html">Novedades</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="contacto.html">Contactanos</a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <div class="navbar-menu">
-        <ul>
-          <a href="Inicio.html">
-            <li>Inicio</li>
-          </a>
-          <a href="Nosotros.html">
-            <li>Nosotros</li>
-          </a>
-          <a href="Catalogo.html">
-            <li>Catalogo</li>
-          </a>
-          <a href="Noticias.html">
-            <li>Novedades</li>
-          </a>
-          <a href="Contacto.html">
-            <li>Contactanos</li>
-          </a>
-        </ul>
-      </div>
-      <div class="navbar-button">Registrarse</div>
     </nav>
   </header>
 
@@ -87,56 +91,67 @@
 
   <!-- Footer -->
   <footer class="footer">
-    <div class="footer-content">
-      <div class="footer-logo">
-        <h3>Craftmania Panamá</h3>
-      </div>
-      <div class="footer-links">
-        <div class="footer-section">
-          <h4>Catálogo</h4>
-          <ul>
-            <li><a href="#">Productos</a></li>
-            <li><a href="#">Ofertas</a></li>
-            <li><a href="#">Novedades</a></li>
-            <!-- Añadir más opciones aquí -->
-          </ul>
+    <footer>
+      <div class="container-fluid d-flex flex-column justify-content-center">
+        <div class="row d-none d-lg-flex">
+          <div class="col-3">
+            <div class="footer-section">
+              <h4>Catálogo</h4>
+              <ul>
+                <li><a href="#">Productos</a></li>
+                <li><a href="#">Ofertas</a></li>
+                <li><a href="#">Novedades</a></li>
+                <!-- Añadir más opciones aquí -->
+              </ul>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="footer-section">
+              <h4>Servicios</h4>
+              <ul>
+                <li><a href="#">Envíos</a></li>
+                <li><a href="#">Personalización</a></li>
+                <li><a href="#">Asesoramiento</a></li>
+                <!-- Añadir más opciones aquí -->
+              </ul>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="footer-section">
+              <h4>Freebies</h4>
+              <ul>
+                <li><a href="#">Descargas gratuitas</a></li>
+                <li><a href="#">Muestras gratuitas</a></li>
+                <li><a href="#">Promociones</a></li>
+                <!-- Añadir más opciones aquí -->
+              </ul>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="footer-section">
+              <h4>Nosotros</h4>
+              <ul>
+                <li><a href="#">Misión y visión</a></li>
+                <li><a href="#">Equipo</a></li>
+                <li><a href="#">Testimonios</a></li>
+                <!-- Añadir más opciones aquí -->
+              </ul>
+            </div>
+          </div>
         </div>
-        <div class="footer-section">
-          <h4>Servicios</h4>
-          <ul>
-            <li><a href="#">Envíos</a></li>
-            <li><a href="#">Personalización</a></li>
-            <li><a href="#">Asesoramiento</a></li>
-            <!-- Añadir más opciones aquí -->
-          </ul>
+        <div class="row">
+          <div class="col">
+            <div class="footer-bottom">
+              <p>Todos los derechos reservados &copy; Craftmania Panamá, 2023</p>
+              <div class="footer-legal">
+                <a href="#">Políticas de privacidad</a>
+                <a href="#">Términos y condiciones</a>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="footer-section">
-          <h4>Freebies</h4>
-          <ul>
-            <li><a href="#">Descargas gratuitas</a></li>
-            <li><a href="#">Muestras gratuitas</a></li>
-            <li><a href="#">Promociones</a></li>
-            <!-- Añadir más opciones aquí -->
-          </ul>
-        </div>
-        <div class="footer-section">
-          <h4>Nosotros</h4>
-          <ul>
-            <li><a href="#">Misión y visión</a></li>
-            <li><a href="#">Equipo</a></li>
-            <li><a href="#">Testimonios</a></li>
-            <!-- Añadir más opciones aquí -->
-          </ul>
-        </div>
-      </div>
-    </div>
-    <div class="footer-bottom">
-      <p>Todos los derechos reservados &copy; Craftmania Panamá, 2023</p>
-      <div class="footer-legal">
-        <a href="#">Políticas de privacidad</a>
-        <a href="#">Términos y condiciones</a>
-      </div>
-    </div>
+    </footer>
+
   </footer>
 </body>
 
