Actualización 0.2 para Proyecto Final

--- a/index.html
+++ b/index.html
@@ -1,15 +1,19 @@
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/bootstrap.min.css" />
+  <link rel="stylesheet" href="css/bootstrap.min.css">
   <link rel="stylesheet" href="estilos.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito+Sans">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Nunito">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Work+Sans">
 
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Inicio</title>
+  <meta name="description"
+    content="CraftMania ofrece personalización única para tus celebraciones. Descubre nuestro catálogo y haz que tu próximo evento sea excepcional.">
+  <meta name="keywords" content="CraftMania, celebraciones personalizadas, eventos, catálogo">
+
+  <title>CraftMania - Personalización de Celebraciones Únicas</title>
 </head>
 
 <body>
@@ -18,45 +22,38 @@
     <span class="font-weight-light mb-0">Envío gratuito a partir de $40. Tiempo de entrega en 48 horas</span>
   </header>
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand d-lg-none" href="index.html">
+    <a class="navbar-brand d-lg-none" href="./index.html">
       <img src="./assets/Craft-Mania-Logo.png" alt="Logo de tu empresa" height="50" class="p-2">
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
       aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <a class="nav-link" href="./pages/crafting.html">
-            <img src="./assets/icons/Papel.png" alt="Papelería Creativa"> Craft's
-          </a>
+          <img src="./assets/icons/Inicio.png" alt="Papelería Creativa">
+          <a class="nav-link" href="../index.html">Inicio</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./pages/sublimation.html">
-            <img src="./assets/icons/Tinta.png" alt="Aplicación de Tinta"> Sublimación
-          </a>
+          <img src="./assets/icons/Papel.png" alt="Papelería Creativa">
+          <a class="nav-link" href="./pages/crafting.html">Craft's</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./pages/vinyl.html">
-            <img src="./assets/icons/Vinil.png" alt="Vinilos de Corte & Textiles"> Vinilos
-          </a>
+          <img src="./assets/icons/Tinta.png" alt="Aplicación de Tinta"> 
+          <a class="nav-link" href="./pages/sublimation.html">Sublimación</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./pages/delivery_points.html">
-            <img src="./assets/icons/Location.png" alt="Ubicación"> Puntos de Entrega
-          </a>
+          <img src="./assets/icons/Vinil.png" alt="Vinilos de Corte & Textiles"> 
+          <a class="nav-link" href="./pages/vinyl.html">Vinilos</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./pages/support.html">
-            <img src="./assets/icons/Support.png" alt="Asistencia en Línea"> Soporte
-          </a>
+          <img src="./assets/icons/Location.png" alt="Ubicación"> 
+          <a class="nav-link" href="./pages/delivery_points.html">Puntos de Entrega</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="./pages/contact.html">
-            <img src="./assets/icons/Contacto.png" alt="Información de Contacto"> Contacto
-          </a>
+          <img src="./assets/icons/Contacto.png" alt="Información de Contacto"> 
+          <a class="nav-link" href="./pages/contact.html">Contacto</a>
         </li>
       </ul>
     </div>
@@ -69,12 +66,12 @@
       <div class="row p-5 justify-content-around">
         <div class="col-lg-5 col-md-12">
           <span>Bienvenido a CraftMania</span>
-          <h1 class="mb-2">Personaliza & Disfruta</h1>
-          <p>Nos apasiona dar vida a tus celebraciones de cumpleaños y eventos de una manera única y personalizada. Ya
-            sea que estés planeando una fiesta de cumpleaños, una reunión corporativa o cualquier otro evento, estamos
-            aquí para convertir tus ideas en realidad.<br><br>Explora nuestro catálogo y descubre cómo podemos hacer
-            que tu próxima celebración sea excepcional.</p>
-          <button class="btn btn-primary" id="headerBtn">Conocer más</button>
+          <h1 class="mb-2">Personalización de Celebraciones</h1>
+          <p>En CraftMania, nos apasiona dar vida a tus celebraciones de cumpleaños y eventos de una manera única y
+            personalizada. Ya sea que estés planeando una fiesta de cumpleaños, una reunión corporativa o cualquier otro
+            evento, estamos aquí para convertir tus ideas en realidad. Explora nuestro catálogo y descubre cómo podemos
+            hacer que tu próxima celebración sea excepcional y memorable.</p>
+          <button class="btn btn-primary" id="headerBtn">Descubre más</button>
         </div>
         <div class="col-lg-5 d-none d-lg-flex align-items-center">
           <img src="./assets/Craft-Mania-Logo.png" alt="Logo" class="img-fluid" id="headLogo">
@@ -118,11 +115,10 @@
 
     <section class="mt-3" id="thirdSection">
       <div class="row mb-4">
-        <h2 class="mb-3 text-center">¡La temática que tu elijas!</h2>
-        <span class="text-center">Una película, un personaje de ficción o un anime. Sea lo que sea, estamos aquí para ti
-          y
-          te<br>brindaremos
-          la personalización al 100% sea cual sea tu elección.</span>
+        <h2 class="mb-3 text-center">¿Qué servicios ofrecemos?</h2>
+        <span class="text-center">Estas 4 tarjetas representan los puntos fuertes que CraftMania ofrece para ti.
+          Selecciona el que te sea de más interes y descubre más al respecto de nuestro proceso creativo.
+        </span>
       </div>
       <div class="container-fluid">
         <div class="row mb-5 justify-content-lg-around justify-content-center">
@@ -161,9 +157,10 @@
         <div class="row px-5 d-flex justify-content-around mt-5">
           <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
             <div class="sectionTitle">Redes Sociales</div>
-            <div class="sectionItem">Instagram</div>
-            <div class="sectionItem">Facebook</div>
-            <div class="sectionItem">TikTok</div>
+            <div class="sectionItem"> <a
+                href="https://instagram.com/craftmania.pty?igshid=MzRlODBiNWFlZA==">Instagram</a> </div>
+            <div class="sectionItem"><a href="https://www.facebook.com/profile.php?id=61551363476187">Facebook</a></div>
+            <div class="sectionItem"><a href="https://www.tiktok.com/@mgcraft.pty?_t=8fmU2t6IpW9&_r=1">TikTok</a></div>
           </div>
           <div class="sectionContainer col-lg-2 text-light d-flex flex-column justify-content-start">
             <div class="sectionTitle">Políticas</div>
