--- a/index.html
+++ b/index.html
@@ -32,28 +32,28 @@
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item">
-          <img src="./assets/icons/Inicio.png" alt="Papelería Creativa">
+          <img src="../assets/icons/Inicio.png" alt="Papelería Creativa">
           <a class="nav-link" href="../index.html">Inicio</a>
         </li>
         <li class="nav-item">
-          <img src="./assets/icons/Papel.png" alt="Papelería Creativa">
-          <a class="nav-link" href="./pages/crafting.html">Craft's</a>
+          <img src="../assets/icons/Papel.png" alt="Papelería Creativa">
+          <a class="nav-link" href="..pages/crafting.html">Craft's</a>
         </li>
         <li class="nav-item">
-          <img src="./assets/icons/Tinta.png" alt="Aplicación de Tinta"> 
-          <a class="nav-link" href="./pages/sublimation.html">Sublimación</a>
+          <img src="../assets/icons/Tinta.png" alt="Aplicación de Tinta"> 
+          <a class="nav-link" href="../pages/sublimation.html">Sublimación</a>
         </li>
         <li class="nav-item">
-          <img src="./assets/icons/Vinil.png" alt="Vinilos de Corte & Textiles"> 
-          <a class="nav-link" href="./pages/vinyl.html">Vinilos</a>
+          <img src="../assets/icons/Vinil.png" alt="Vinilos de Corte & Textiles"> 
+          <a class="nav-link" href="../pages/vinyl.html">Vinilos</a>
         </li>
         <li class="nav-item">
-          <img src="./assets/icons/Location.png" alt="Ubicación"> 
-          <a class="nav-link" href="./pages/delivery_points.html">Puntos de Entrega</a>
+          <img src="../assets/icons/Location.png" alt="Ubicación"> 
+          <a class="nav-link" href="../pages/delivery_points.html">Puntos de Entrega</a>
         </li>
         <li class="nav-item">
-          <img src="./assets/icons/Contacto.png" alt="Información de Contacto"> 
-          <a class="nav-link" href="./pages/contact.html">Contacto</a>
+          <img src="../assets/icons/Contacto.png" alt="Información de Contacto"> 
+          <a class="nav-link" href="../pages/contact.html">Contacto</a>
         </li>
       </ul>
     </div>
